Changed template and renamed flask app.

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -52,44 +52,38 @@
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
+  <div class="col-md-1">
+    <input type="text" class="form-control" name="miles" value="Distance in miles"/>
+  </div>
+  <div class="col-md-1">
+    <input type="text" class="form-control" name="kilometers" value="Distance in kilometers"/>
+  </div>
   <div class="col-md-2">
-    <input type="text" class="form-control"
-     name="miles" value="Distance in miles"/>
+    <input type="text" class="form-control" name="location" value="location" />
   </div>
-  <div class="col-md-4">
-    <input type="text" class="form-control"
-      name="location" value="location" />
+  <div class="col-md-3">
+    <span class="times form-control">(Open Time)</span>
   </div>
-  <div class="col-md-4">
-    <span class="times form-control">(times)</span>
+  <div class="col-md-3">
+    <span class="times form-control">(Close Time)</span>
   </div>
 </div>
 
 <div class="row">
+  <div class="col-md-1">
+    <input type="text" class="form-control" name="miles" value="Distance in miles"/>
+  </div>
+  <div class="col-md-1">
+    <input type="text" class="form-control" name="kilometers" value="Distance in kilometers"/>
+  </div>
   <div class="col-md-2">
-    <input type="text" class="form-control"
-     name="miles" value="Distance in miles"/>
+    <input type="text" class="form-control" name="location" value="location" />
   </div>
-  <div class="col-md-4">
-    <input type="text" class="form-control"
-      name="location" value="location" />
+  <div class="col-md-3">
+    <span class="times form-control">(Open Time)</span>
   </div>
-  <div class="col-md-4">
-    <span class="times form-control">(times)</span>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-2">
-    <input type="text" class="form-control"
-     name="miles" value="Distance in miles"/>
-  </div>
-  <div class="col-md-4">
-    <input type="text" class="form-control"
-      name="location" value="location" />
-  </div>
-  <div class="col-md-4">
-    <span class="times form-control">(times)</span>
+  <div class="col-md-3">
+    <span class="times form-control">(Close Time)</span>
   </div>
 </div>
 </form>
