--- a/templates/calc.html
+++ b/templates/calc.html
@@ -52,32 +52,44 @@
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
-  <div class="col-md-1">
-    <input type="text" class="form-control" name="miles" value="Distance in miles"/>
-  </div>
-  <div class="col-md-1">
-    <input type="text" class="form-control" name="kilometers" value="Distance in kilometers"/>
+  <div class="col-md-2">
+    <span class="times form-control">Distance</span>
   </div>
   <div class="col-md-2">
-    <input type="text" class="form-control" name="location" value="location" />
+    <span class="times form-control">Location</span>
   </div>
-  <div class="col-md-3">
-    <span class="times form-control">(Open Time)</span>
-  </div>
-  <div class="col-md-3">
-    <span class="times form-control">(Close Time)</span>
+  <div class="col-md-6">
+    <span class="times form-control">Time</span>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-1">
-    <input type="text" class="form-control" name="miles" value="Distance in miles"/>
+    <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
   <div class="col-md-1">
-    <input type="text" class="form-control" name="kilometers" value="Distance in kilometers"/>
+    <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
   <div class="col-md-2">
-    <input type="text" class="form-control" name="location" value="location" />
+    <input type="text" class="form-control" name="location" value="Optional" />
+  </div>
+  <div class="col-md-3">
+    <span class="times form-control">(Open)</span>
+  </div>
+  <div class="col-md-3">
+    <span class="times form-control">(Close)</span>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-1">
+    <input type="text" class="form-control" name="miles" value="Miles"/>
+  </div>
+  <div class="col-md-1">
+    <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
+  </div>
+  <div class="col-md-2">
+    <input type="text" class="form-control" name="location" value="Optional" />
   </div>
   <div class="col-md-3">
     <span class="times form-control">(Open Time)</span>
