--- a/templates/calc.html
+++ b/templates/calc.html
@@ -53,49 +53,49 @@
 <form role="form">
 <div class="row">
   <div class="col-md-2">
-    <span class="times form-control">Distance</span>
+    Distance
   </div>
   <div class="col-md-2">
-    <span class="times form-control">Location</span>
+    Location
   </div>
   <div class="col-md-6">
-    <span class="times form-control">Time</span>
+    Time
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-1">
+  <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
-  <div class="col-md-1">
+  <div class="col-md-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-4">
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
-  <div class="col-md-3">
+  <div class="col-md-2">
     <span class="times form-control">(Open)</span>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-2">
     <span class="times form-control">(Close)</span>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-1">
+  <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
-  <div class="col-md-1">
+  <div class="col-md-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-4">
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
-  <div class="col-md-3">
-    <span class="times form-control">(Open Time)</span>
+  <div class="col-md-2">
+    <span class="times form-control">(Open)</span>
   </div>
-  <div class="col-md-3">
-    <span class="times form-control">(Close Time)</span>
+  <div class="col-md-2">
+    <span class="times form-control">(Close)</span>
   </div>
 </div>
 </form>
