--- a/templates/calc.html
+++ b/templates/calc.html
@@ -52,14 +52,14 @@
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
-  <div class="col-md-2">
-    Distance
+  <div class="col-md-4">
+    <strong>Distance</strong>
   </div>
-  <div class="col-md-2">
-    Location
+  <div class="col-md-4">
+    <strong>Location</strong>
   </div>
-  <div class="col-md-6">
-    Time
+  <div class="col-md-4">
+    <strong>Time</strong>
   </div>
 </div>
 
