--- a/templates/calc.html
+++ b/templates/calc.html
@@ -53,13 +53,13 @@
 <form role="form">
 <div class="row">
   <div class="col-md-4">
-    <strong class="text-center">Distance</strong>
+    <p class="text-center">Distance</p>
   </div>
   <div class="col-md-4">
-    <strong class="text-center">Location</strong>
+    <p class="text-center">Location</p>
   </div>
   <div class="col-md-4">
-    <strong class="text-center">Time</strong>
+    <p class="text-center">Time</p>
   </div>
 </div>
 
