--- a/templates/calc.html
+++ b/templates/calc.html
@@ -58,8 +58,11 @@
   <div class="col-md-4">
     <p class="text-center">Location</p>
   </div>
-  <div class="col-md-4">
-    <p class="text-center">Time</p>
+  <div class="col-md-2">
+    <p class="text-center">Open Time</p>
+  </div>
+  <div class="col-md-2">
+    <p class="text-center">Close Time</p>
   </div>
 </div>
 
