--- a/templates/calc.html
+++ b/templates/calc.html
@@ -53,9 +53,12 @@
 <form role="form">
 <div class="row">
   <div class="col-md-4">
-    <p class="text-center">Distance</p>
+    <p class="text-center">Controle No.</p>
   </div>
   <div class="col-md-4">
+    <p class="text-center">Distance</p>
+  </div>
+  <div class="col-md-3">
     <p class="text-center">Location</p>
   </div>
   <div class="col-md-2">
@@ -67,38 +70,44 @@
 </div>
 
 <div class="row">
+  <div class="col-md-1">
+    <p class="text-center">Close Time</p>
+  </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
   <div class="col-md-2">
-    <span class="times form-control">(Open)</span>
+    <p class="times form-control">(Open)</p>
   </div>
   <div class="col-md-2">
-    <span class="times form-control">(Close)</span>
+    <p class="times form-control">(Close)</p>
   </div>
 </div>
 
 <div class="row">
+  <div class="col-md-1">
+    <p class="text-center">Close Time</p>
+  </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
   <div class="col-md-2">
-    <span class="times form-control">(Open)</span>
+    <p class="times form-control">(Open)</p>
   </div>
   <div class="col-md-2">
-    <span class="times form-control">(Close)</span>
+    <p class="times form-control">(Close)</p>
   </div>
 </div>
 </form>
