--- a/templates/calc.html
+++ b/templates/calc.html
@@ -52,7 +52,7 @@
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-1">
     <p class="text-center">Controle No.</p>
   </div>
   <div class="col-md-4">
@@ -71,7 +71,7 @@
 
 <div class="row">
   <div class="col-md-1">
-    <p class="text-center">Close Time</p>
+    <p class="text-center">1</p>
   </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
@@ -92,7 +92,7 @@
 
 <div class="row">
   <div class="col-md-1">
-    <p class="text-center">Close Time</p>
+    <p class="text-center">2</p>
   </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
