--- a/templates/calc.html
+++ b/templates/calc.html
@@ -53,7 +53,7 @@
 <form role="form">
 <div class="row">
   <div class="col-md-1">
-    <p class="text-center">Controle No.</p>
+    <p class="text-center">No.</p>
   </div>
   <div class="col-md-4">
     <p class="text-center">Distance</p>
