--- a/templates/calc.html
+++ b/templates/calc.html
@@ -71,7 +71,7 @@
 
 <div class="row">
   <div class="col-md-1">
-    <div class="text-center" stlye="display:inline-block;vertical-align:middle;float:none;">1</div>
+    <div class="text-center"><h3>1</h3></div>
   </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
@@ -92,7 +92,7 @@
 
 <div class="row">
   <div class="col-md-1">
-    <div class="text-center" stlye="display:inline-block;vertical-align:middle;float:none;">2</div>
+    <div class="text-center"><h3>2</h3></div>
   </div>
   <div class="col-md-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
