--- a/templates/calc.html
+++ b/templates/calc.html
@@ -52,61 +52,61 @@
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
-  <div class="col-md-1">
+  <div class="col-sm-1">
     <p class="text-center">No.</p>
   </div>
-  <div class="col-md-4">
+  <div class="col-sm-4">
     <p class="text-center">Distance</p>
   </div>
-  <div class="col-md-3">
+  <div class="col-sm-3">
     <p class="text-center">Location</p>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <p class="text-center">Open Time</p>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <p class="text-center">Close Time</p>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-1">
+  <div class="col-sm-1">
     <div class="text-center h5">1</div>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-md-3">
+  <div class="col-sm-3">
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <p class="times form-control">(Open)</p>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <p class="times form-control">(Close)</p>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-1">
+  <div class="col-sm-1">
     <div class="text-center h5">2</div>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <input type="text" class="form-control" name="miles" value="Miles"/>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-md-3">
+  <div class="col-sm-3">
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <p class="times form-control">(Open)</p>
   </div>
-  <div class="col-md-2">
+  <div class="col-sm-2">
     <p class="times form-control">(Close)</p>
   </div>
 </div>
