--- a/templates/calc.html
+++ b/templates/calc.html
@@ -49,6 +49,7 @@
   {% endif %}
 {% endwith %}
 
+<div class="row">
  <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance
   <span class="caret"></span></button>
@@ -60,8 +61,9 @@
     <li><a href="#">1000</a></li>
   </ul>
 </div>
-<div><input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/></div>
-<div><input type="text" class="form-control" name="StartTime" value="HH:MM"/></div>
+<div class="col-sm-1"><input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/></div>
+<div class="col-sm-1"><input type="text" class="form-control" name="StartTime" value="HH:MM"/></div>
+</div>
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
