--- a/templates/calc.html
+++ b/templates/calc.html
@@ -50,19 +50,22 @@
 {% endwith %}
 
 <div class="row">
- <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance
-  <span class="caret"></span></button>
-  <ul class="dropdown-menu">
-    <li><a href="#">200</a></li>
-    <li><a href="#">200</a></li>
-    <li><a href="#">300</a></li>
-    <li><a href="#">400</a></li>
-    <li><a href="#">1000</a></li>
-  </ul>
-</div>
-<div class="col-sm-1"><input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/></div>
-<div class="col-sm-1"><input type="text" class="form-control" name="StartTime" value="HH:MM"/></div>
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance<span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">200</a></li>
+      <li><a href="#">200</a></li>
+      <li><a href="#">300</a></li>
+      <li><a href="#">400</a></li>
+      <li><a href="#">1000</a></li>
+    </ul>
+  </div>
+  <div class="col-sm-2">
+    <span>Start Date</span><input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/>
+  </div>
+  <div class="col-sm-2">
+    <span>Start Date</span><input type="text" class="form-control" name="StartTime" value="HH:MM"/>
+  </div>
 </div>
 <!-- Design on bootstrap grid -->
 <form role="form">
