--- a/templates/calc.html
+++ b/templates/calc.html
@@ -48,8 +48,8 @@
     </ul>
   {% endif %}
 {% endwith %}
-
-  <div class="dropdown">
+<div class="row">
+  <div class="dropdown col-sm-2">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li><a href="#">200</a></li>
@@ -65,7 +65,7 @@
   <div class="col-sm-2">
     <span>Start Date</span><input type="text" class="form-control" name="StartTime" value="HH:MM"/>
   </div>
-
+</div>
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
