--- a/templates/calc.html
+++ b/templates/calc.html
@@ -60,10 +60,10 @@
     </ul>
   </div>
   <div class="col-sm-2">
-    <span>Start Date</span><input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/>
+    <span>Start Date<input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/></span>
   </div>
   <div class="col-sm-2">
-    <span>Start Date</span><input type="text" class="form-control" name="StartTime" value="HH:MM"/>
+    <span>Start Date<input type="text" class="form-control" name="StartTime" value="HH:MM"/></span>
   </div>
 </div>
 <!-- Design on bootstrap grid -->
