--- a/templates/calc.html
+++ b/templates/calc.html
@@ -59,11 +59,11 @@
       <li><a href="#">1000</a></li>
     </ul>
   </div>
-  <div class="col-sm-2">
-    <span>Start Date<input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/></span>
+  <div class="input-group col-sm-2">
+    <span>Start Date</span><input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/>
   </div>
-  <div class="col-sm-2">
-    <span>Start Date<input type="text" class="form-control" name="StartTime" value="HH:MM"/></span>
+  <div class="input-group col-sm-2">
+    <span>Start Date</span><input type="text" class="form-control" name="StartTime" value="HH:MM"/>
   </div>
 </div>
 <!-- Design on bootstrap grid -->
