--- a/templates/calc.html
+++ b/templates/calc.html
@@ -59,11 +59,11 @@
       <li><a href="#">1000</a></li>
     </ul>
   </div>
-  <div class="input-group">
+  <div class="input-group col-sm-2">
     <span class="input-group-addon">Start Date</span>
     <input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/>
   </div>
-  <div class="input-group">
+  <div class="input-group col-sm-2">
     <span class="input-group-addon">Start Date</span>
     <input type="text" class="form-control" name="StartTime" value="HH:MM"/>
   </div>
