--- a/templates/calc.html
+++ b/templates/calc.html
@@ -49,7 +49,8 @@
   {% endif %}
 {% endwith %}
 <div class="row">
-  <div class="dropdown col-sm-2">
+  <div class="col-sm-1"></div>
+  <div class="dropdown col-sm-4">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li><a href="#">200</a></li>
@@ -59,14 +60,15 @@
       <li><a href="#">1000</a></li>
     </ul>
   </div>
-  <div class="input-group col-sm-2">
+  <div class="input-group col-sm-3">
     <span class="input-group-addon">Start Date</span>
     <input type="text" class="form-control" name="StartDate" value="YYYY/MM/DD"/>
   </div>
-  <div class="input-group col-sm-2">
+  <div class="input-group col-sm-3">
     <span class="input-group-addon">Start Date</span>
     <input type="text" class="form-control" name="StartTime" value="HH:MM"/>
   </div>
+  <div class="col-sm-1"></div>
 </div>
 <!-- Design on bootstrap grid -->
 <form role="form">
