--- a/templates/calc.html
+++ b/templates/calc.html
@@ -50,15 +50,17 @@
 {% endwith %}
 <div class="row">
   <div class="col-sm-1"></div>
-  <div class="dropdown col-sm-4">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li><a href="#">200</a></li>
-      <li><a href="#">200</a></li>
-      <li><a href="#">300</a></li>
-      <li><a href="#">400</a></li>
-      <li><a href="#">1000</a></li>
-    </ul>
+  <div class="col-sm-4">
+    <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brevet Distance <span class="caret"></span></button>
+      <ul class="dropdown-menu">
+        <li><a href="#">200</a></li>
+        <li><a href="#">200</a></li>
+        <li><a href="#">300</a></li>
+        <li><a href="#">400</a></li>
+        <li><a href="#">1000</a></li>
+      </ul>
+    </div>
   </div>
   <div class="input-group col-sm-3">
     <span class="input-group-addon">Start Date</span>
@@ -70,6 +72,7 @@
   </div>
   <div class="col-sm-1"></div>
 </div>
+<br>
 <!-- Design on bootstrap grid -->
 <form role="form">
 <div class="row">
