--- a/templates/calc.html
+++ b/templates/calc.html
@@ -163,7 +163,7 @@
   });   // end of what we do on document ready
 
   $('li[name="ddmItem"]').click(function(){
-      $('#dropMenu').html($(this).html() + " <span class='caret' />");
+      $('#dropMenu').html("Brevet Distance: " + $(this).html() + " <span class='caret' />");
   });
 
 </script>
