--- a/templates/calc.html
+++ b/templates/calc.html
@@ -51,11 +51,11 @@
 <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropMenu">Brevet Distance: 200 km <span class="caret"/></button>
   <ul class="dropdown-menu">
-    <li name="ddmItem"><a href='#'>200 km </a></li>
-    <li name="ddmItem"><a href='#'>300 km </a></li>
-    <li name="ddmItem"><a href='#'>400 km </a></li>
-    <li name="ddmItem"><a href='#'>600 km </a></li>
-    <li name="ddmItem"><a href='#'>1000 km </a></li>
+    <li><a href='#' name="ddmItem">200 km </a></li>
+    <li><a href='#' name="ddmItem">300 km </a></li>
+    <li><a href='#' name="ddmItem">400 km </a></li>
+    <li><a href='#' name="ddmItem">600 km </a></li>
+    <li><a href='#' name="ddmItem">1000 km </a></li>
   </ul>
 </div>
 <div class="input-group col-sm-3">
