--- a/templates/calc.html
+++ b/templates/calc.html
@@ -162,8 +162,8 @@
       });  // End of the function to be called when field changes
   });   // end of what we do on document ready
 
-  $('li[name="ddmItem"]').click(function(){
-      $('#dropMenu').html("Brevet Distance: " + $(this).html() + " <span class='caret' />");
+  $('a[name="ddmItem"]').click(function(){
+      $('#dropMenu').html("Brevet Distance: " + $(this).text() + " <span class='caret' />");
   });
 
 </script>
