--- a/templates/calc.html
+++ b/templates/calc.html
@@ -169,11 +169,10 @@
   });
 
   $('#startDate').change(function(){
-      alert($('#startDate').val());
+      alert("fired");
       if(dateYYYYMMDDRegex.test($('#startDate').val()){
         alert("good");
       }
-
   });
   
 
