--- a/templates/calc.html
+++ b/templates/calc.html
@@ -170,7 +170,7 @@
 
   $('#startDate').change(function(){
       alert("fired");
-      if(dateYYYYMMDDRegex.test($('#startDate').val()){
+      if(dateYYYYMMDDRegex.test($('#startDate').val())){
         alert("good");
       }
   });
