--- a/templates/calc.html
+++ b/templates/calc.html
@@ -134,7 +134,8 @@
 
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 
-  var dateYYYYMMDDRegex = '^(19|20)dd[/](0[1-9]|1[012])[/](0[1-9]|[12]d|3[01])$';
+  var dateRegex = '^\d{4}\/([0][1-9]|[1][012])\/([0][1-9]|[12][\d]|[3][01])$';
+  var timeRegex = '^([0-1][0-9]|[2][0-3]):([0-5][0-9])$';
 
   $(document).ready(function(){
    // Do the following when the page is finished loading
@@ -169,7 +170,7 @@
   });
 
   $('#startDate').change(function(){
-       if(dateYYYYMMDDRegex.test($('#startDate').val())){
+       if(dateRegex.test($('#startDate').val())){
         alert("good");
       }
   });
