--- a/templates/calc.html
+++ b/templates/calc.html
@@ -134,8 +134,8 @@
 
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 
-  var dateRegex = '^\d{4}\/([0][1-9]|[1][012])\/([0][1-9]|[12][\d]|[3][01])$';
-  var timeRegex = '^([0-1][0-9]|[2][0-3]):([0-5][0-9])$';
+  var dateRegex = /^\d{4}\/([0][1-9]|[1][012])\/([0][1-9]|[12][\d]|[3][01])$/;
+  var timeRegex = /^([0-1][0-9]|[2][0-3]):([0-5][0-9])$/;
 
   $(document).ready(function(){
    // Do the following when the page is finished loading
