--- a/templates/calc.html
+++ b/templates/calc.html
@@ -101,10 +101,10 @@
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
   <div class="col-sm-2">
-    <p class="times">(Open)</p>
+    <p class="times text-center">(Open)</p>
   </div>
   <div class="col-sm-2">
-    <p class="times">(Close)</p>
+    <p class="times text-center">(Close)</p>
   </div>
 </div>
 
@@ -122,10 +122,10 @@
     <input type="text" class="form-control" name="location" value="Optional" />
   </div>
   <div class="col-sm-2">
-    <p class="times form-control">(Open)</p>
+    <p class="times text-center">(Open)</p>
   </div>
   <div class="col-sm-2">
-    <p class="times form-control">(Close)</p>
+    <p class="times text-center">(Close)</p>
   </div>
 </div>
 </form>
