--- a/templates/calc.html
+++ b/templates/calc.html
@@ -113,7 +113,7 @@
     <div class="text-center h5">2</div>
   </div>
   <div class="col-sm-2">
-    <input type="text" class="form-control" name="miles" value="Miles"/>
+    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
   </div>
   <div class="col-sm-2">
     <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
