--- a/templates/calc.html
+++ b/templates/calc.html
@@ -92,13 +92,13 @@
     <div class="text-center h5">1</div>
   </div>
   <div class="col-sm-2">
-    <input type="text" class="form-control" name="miles" value="Miles"/>
+    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
   </div>
   <div class="col-sm-2">
-    <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
+    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
   </div>
   <div class="col-sm-3">
-    <input type="text" class="form-control" name="location" value="Optional" />
+    <input type="text" class="form-control text-center" name="location" value="Optional" />
   </div>
   <div class="col-sm-2">
     <p class="times text-center">(Open)</p>
@@ -116,10 +116,10 @@
     <input type="text" class="form-control text-center" name="miles" value="Miles"/>
   </div>
   <div class="col-sm-2">
-    <input type="text" class="form-control" name="kilometers" value="Kilometers"/>
+    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
   </div>
   <div class="col-sm-3">
-    <input type="text" class="form-control" name="location" value="Optional" />
+    <input type="text" class="form-control text-center" name="location" value="Optional" />
   </div>
   <div class="col-sm-2">
     <p class="times text-center">(Open)</p>
