--- a/templates/calc.html
+++ b/templates/calc.html
@@ -146,9 +146,10 @@
       $('input[name="miles"]').change(
           // ... execute this function
           function(){
+              console.log($(this).val());
               var miles = $(this).val();
               var target = $(this).parents(".row").find(".times");
-              var kmInput = $(this).parents(".row").children("kilometers");
+              var kmInput = $(this).parents(".row").children("input[name=kilometers");
 
               kmInput.val(miles*KM_PER_MILE);
 
