--- a/templates/calc.html
+++ b/templates/calc.html
@@ -149,7 +149,7 @@
               console.log($(this).val());
               var miles = $(this).val();
               var target = $(this).parents(".row").find(".times");
-              var kmInput = $(this).parents(".row").children("input[name=kilometers");
+              var kmInput = $(this).parents(".row").children("input[name=kilometers]");
 
               kmInput.val(miles*KM_PER_MILE);
 
