--- a/templates/calc.html
+++ b/templates/calc.html
@@ -91,19 +91,19 @@
   <div class="col-sm-1">
     <div class="text-center h5">1</div>
   </div>
-  <div class="col-sm-2">
-    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
+  <div class="col-sm-2" name="miles">
+    <input type="text" class="form-control text-center" 1value="Miles"/>
   </div>
-  <div class="col-sm-2">
-    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
+  <div class="col-sm-2" name="kilometers">
+    <input type="text" class="form-control text-center" value="Kilometers"/>
   </div>
-  <div class="col-sm-3">
-    <input type="text" class="form-control text-center" name="location" value="Optional" />
+  <div class="col-sm-3" name="location">
+    <input type="text" class="form-control text-center" value="Optional" />
   </div>
-  <div class="col-sm-2">
+  <div class="col-sm-2" name="open">
     <p class="times text-center">(Open)</p>
   </div>
-  <div class="col-sm-2">
+  <div class="col-sm-2" name="close">
     <p class="times text-center">(Close)</p>
   </div>
 </div>
@@ -112,14 +112,14 @@
   <div class="col-sm-1">
     <div class="text-center h5">2</div>
   </div>
-  <div class="col-sm-2">
-    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
+  <div class="col-sm-2" name="miles">
+    <input type="text" class="form-control text-center" 1value="Miles"/>
   </div>
-  <div class="col-sm-2">
-    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
+  <div class="col-sm-2" name="kilometers">
+    <input type="text" class="form-control text-center" value="Kilometers"/>
   </div>
-  <div class="col-sm-3">
-    <input type="text" class="form-control text-center" name="location" value="Optional" />
+  <div class="col-sm-3" name="location">
+    <input type="text" class="form-control text-center" value="Optional" />
   </div>
   <div class="col-sm-2" name="open">
     <p class="times text-center">(Open)</p>
@@ -149,9 +149,9 @@
               console.log($(this).val());
               var miles = $(this).val();
               var target = $(this).parents(".row").find(".times");
-              var kmInput = $(this).parents(".row").children("input[name|='kilometers']");
+              var kmParent = $(this).parents(".row").children("input[name|='kilometers']");
               console.log($(this).parents(".row").children());
-              kmInput.val(miles*KM_PER_MILE);
+              kmParent.children().val(miles*KM_PER_MILE);
 
               return true;
 
