--- a/templates/calc.html
+++ b/templates/calc.html
@@ -92,7 +92,7 @@
     <div class="text-center h5">1</div>
   </div>
   <div class="col-sm-2" name="miles">
-    <input type="text" class="form-control text-center" 1value="Miles"/>
+    <input type="text" class="form-control text-center" value="Miles"/>
   </div>
   <div class="col-sm-2" name="kilometers">
     <input type="text" class="form-control text-center" value="Kilometers"/>
@@ -113,7 +113,7 @@
     <div class="text-center h5">2</div>
   </div>
   <div class="col-sm-2" name="miles">
-    <input type="text" class="form-control text-center" 1value="Miles"/>
+    <input type="text" class="form-control text-center" value="Miles"/>
   </div>
   <div class="col-sm-2" name="kilometers">
     <input type="text" class="form-control text-center" value="Kilometers"/>
