--- a/templates/calc.html
+++ b/templates/calc.html
@@ -91,20 +91,20 @@
   <div class="col-sm-1">
     <div class="text-center h5">1</div>
   </div>
-  <div class="col-sm-2" name="miles">
-    <input type="text" class="form-control text-center" value="Miles"/>
+  <div class="col-sm-2">
+    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
   </div>
-  <div class="col-sm-2" name="kilometers">
-    <input type="text" class="form-control text-center" value="Kilometers"/>
+  <div class="col-sm-2">
+    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-sm-3" name="location">
-    <input type="text" class="form-control text-center" value="Optional" />
+  <div class="col-sm-3">
+    <input type="text" class="form-control text-center" name="location" value="Optional" />
   </div>
-  <div class="col-sm-2" name="open">
-    <p class="times text-center">(Open)</p>
+  <div class="col-sm-2">
+    <p class="times text-center" name="open">(Open)</p>
   </div>
-  <div class="col-sm-2" name="close">
-    <p class="times text-center">(Close)</p>
+  <div class="col-sm-2">
+    <p class="times text-center" name="close">(Close)</p>
   </div>
 </div>
 
@@ -112,20 +112,20 @@
   <div class="col-sm-1">
     <div class="text-center h5">2</div>
   </div>
-  <div class="col-sm-2" name="miles">
-    <input type="text" class="form-control text-center" value="Miles"/>
+  <div class="col-sm-2">
+    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
   </div>
-  <div class="col-sm-2" name="kilometers">
-    <input type="text" class="form-control text-center" value="Kilometers"/>
+  <div class="col-sm-2">
+    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
   </div>
-  <div class="col-sm-3" name="location">
-    <input type="text" class="form-control text-center" value="Optional" />
+  <div class="col-sm-3">
+    <input type="text" class="form-control text-center" name="location" value="Optional" />
   </div>
-  <div class="col-sm-2" name="open">
-    <p class="times text-center">(Open)</p>
+  <div class="col-sm-2">
+    <p class="times text-center" name="open">(Open)</p>
   </div>
-  <div class="col-sm-2" name="close">
-    <p class="times text-center">(Close)</p>
+  <div class="col-sm-2">
+    <p class="times text-center" name="close">(Close)</p>
   </div>
 </div>
 </form>
@@ -149,9 +149,9 @@
               console.log($(this).val());
               var miles = $(this).val();
               var target = $(this).parents(".row").find(".times");
-              var kmParent = $(this).parents(".row").children("input[name|='kilometers']");
-              console.log($(this).parents(".row").children());
-              kmParent.children().val(miles*KM_PER_MILE);
+              var kmInput = $(this).parents(".row").find("input[name='kilometers']");
+              console.log(kmInput);
+              kmInput.val(miles*KM_PER_MILE);
 
               return true;
 
