--- a/templates/calc.html
+++ b/templates/calc.html
@@ -134,7 +134,7 @@
 
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 
-  var KM_PER_MILE = 1.60934;
+  var KM_PER_MILE = 1.6;
   var dateRegex = /^\d{4}\/([0][1-9]|[1][012])\/([0][1-9]|[12][\d]|[3][01])$/;
   var timeRegex = /^([0-1][0-9]|[2][0-3]):([0-5][0-9])$/;
   var brevetDistance = /\b\d{3,4}\b/;
@@ -148,9 +148,7 @@
           function(){
               console.log($(this).val());
               var miles = $(this).val();
-              var target = $(this).parents(".row").find(".times");
               var kmInput = $(this).parents(".row").find("input[name='kilometers']");
-              console.log(kmInput);
               kmInput.val(miles*KM_PER_MILE);
 
               return true;
@@ -179,16 +177,19 @@
 
   $('#startDate').change(function(){
        if(dateRegex.test($('#startDate').val())){
-        alert("good");
+        displayControls
       }
   });
 
-    $('#startTime').change(function(){
-
-       if(dateRegex.test($('#startDate').val())){
-        
+  $('#startTime').change(function(){
+      if(dateRegex.test($('#startDate').val())){
+          displayControls
       }
   });
+
+  displayControls = function(){
+    alert("it worked");
+  }
 </script>
 
 </div>
