--- a/templates/calc.html
+++ b/templates/calc.html
@@ -180,19 +180,15 @@
   }
 
   $('#startDate').change(function(){
-       if(dateRegex.test($('#startDate').val())){
+       if(dateRegex.test($('#startDate').val()) && dateRegex.test($('#startDate').val())){
         displayControls();
       }
-      else
-        alert("failed regex");
   });
 
   $('#startTime').change(function(){
-      if(dateRegex.test($('#startDate').val())){
-          displayControls();
+      if(dateRegex.test($('#startDate').val()) && dateRegex.test($('#startDate').val())){
+        displayControls();
       }
-      else
-        alert("failed regex");
   });
 
   
